spacing fixes

--- a/src/sass/webpages.scss
+++ b/src/sass/webpages.scss
@@ -32,7 +32,7 @@ svg {
 h1, h2, h3, h4 {
 	font-family: $header-font-family;
 	font-weight: 500;
-	margin: $copy-gap 0;
+	margin: $block-gap 0 $copy-gap 0;
 }
 
 h1 {
@@ -235,7 +235,7 @@ header {
 		display: grid;
 		gap: 8px;
 		grid-template-areas: "nav";
-		justify-content: center;
+		justify-content: start;
 
 		.logo {
 			grid-area: log;
@@ -547,6 +547,12 @@ section {
 	@media (min-width: $breakpoint-md)
 	{
 		padding: $section-margin 0;
+	}
+
+	.container {
+		> h1:first-child, > h2:first-child, > h3:first-child, > h4:first-child {
+			margin-top: 0;
+		}
 	}
 
 	&.alternate {
@@ -891,7 +897,7 @@ section {
 			.container {
 				display: grid;
 				gap: $block-gap;
-				grid-template-columns: 1fr 1fr;
+				grid-template-columns: 1fr;
 			}
 		}
 
@@ -908,6 +914,15 @@ section {
 					left: 0;
 					width: 100%;
 					height: 100%;
+				}
+			}
+		}
+
+		@media (min-width: $breakpoint-lg)
+		{
+			&:not([data-count="1"]) {
+				.container {
+					grid-template-columns: 1fr 1fr;
 				}
 			}
 		}
